added tests for pricebooks and position controllers

--- a/clientFolder/force-app/main/default/classes/PricebookEntryApexControllerTest.cls
+++ b/clientFolder/force-app/main/default/classes/PricebookEntryApexControllerTest.cls
@@ -3,6 +3,7 @@ public class PricebookEntryApexControllerTest {
 
     @testSetup
     public static void setup(){
+              
         Pricebook2 testPB = new Pricebook2();
         testPB.Name = 'Test Pricebook';
         
@@ -20,35 +21,63 @@ public class PricebookEntryApexControllerTest {
         
         insert testProd1;        
         insert testProd2;
+               
         
-        PricebookEntry testPBEntry1 = new PricebookEntry();
+        Pricebook2 pb = [
+            SELECT Id
+            FROM Pricebook2
+            WHERE Name = 'Test Pricebook'
+            LIMIT 1];
+        
         Product2[] prod1 = [SELECT ID 
                   FROM Product2 
                   WHERE Product2.Name = 'Test Product 1'
                   LIMIT 1];
-        Pricebook2[] pb = [SELECT ID 
-                  FROM Pricebook2 
-                  WHERE Pricebook2.Name = 'Test Pricebook'
-                  LIMIT 1];
-        testPBEntry1.Pricebook2 = pb[0];
-        testPBEntry1.Product2Id = prod1[0].Id;
-        testPBEntry1.UnitPrice = 100;
         
-        PricebookEntry testPBEntry2 = new PricebookEntry();
         Product2[] prod2 = [SELECT ID 
                   FROM Product2 
                   WHERE Product2.Name = 'Test Product 2'
                   LIMIT 1];
-        testPBEntry2.Pricebook2 = pb[0];
+                
+        
+        Id pricebookId = Test.getStandardPricebookId();
+        
+        PricebookEntry standardpbEntry1 = new PricebookEntry(
+            unitPrice=0, 
+            useStandardPrice=false, 
+            Product2Id=prod1[0].Id,
+            Pricebook2Id=pricebookId );
+        
+        PricebookEntry standardpbEntry2 = new PricebookEntry(
+            unitPrice=0, 
+            useStandardPrice=false, 
+            Product2Id=prod2[0].Id,
+            Pricebook2Id=pricebookId );
+        
+        
+        insert standardpbEntry1;
+        insert standardpbEntry2;
+        
+        PricebookEntry testPBEntry1 = new PricebookEntry();        
+        testPBEntry1.Pricebook2Id = pb.Id;
+        testPBEntry1.Product2Id = prod1[0].Id;
+        testPBEntry1.UseStandardPrice=false;
+        testPBEntry1.UnitPrice = 100;
+        
+        PricebookEntry testPBEntry2 = new PricebookEntry();        
+        testPBEntry2.Pricebook2Id = pb.Id;
         testPBEntry2.Product2Id = prod2[0].Id;
+        testPBEntry2.UseStandardPrice=false;
         testPBEntry2.UnitPrice = 200;
         
         insert testPBEntry1;
         insert testPBEntry2;
     }
     
-    /*@isTest
+    @isTest
     public static void queryTest(){
-        system.assertEquals(expected, actual);
-    }*/
+        PricebookEntry[] testList1 = PricebookEntryApexController.getPriceBookEntryList(4, 0);
+        PricebookEntry[] testList2 = [SELECT Product2Id, UnitPrice, PriceBook2Id, PriceBook2.Name, Product2.Name, Product2.RecordType.Name FROM PriceBookEntry WHERE Product2.RecordType.Name = 'Car' OR Product2.RecordType.Name = 'Car Service' OR Product2.RecordType.Name = 'Add-on' LIMIT 4 OFFSET 0];
+        system.assertEquals(testList2, testList1);
+    }
 }
