Thursday First Comm: Campaign css fix

--- a/clientFolder/force-app/main/default/classes/AuraDealershipApex.cls
+++ b/clientFolder/force-app/main/default/classes/AuraDealershipApex.cls
@@ -54,7 +54,7 @@ public class AuraDealershipApex {
     
     @AuraEnabled
     public static List<Campaign> getCampTable(){
-        return [SELECT Name, Status,NumberOfResponses,ExpectedRevenue, Id FROM campaign LIMIT 10];
+        return [SELECT Name, Status,NumberOfResponses,ExpectedRevenue, Id FROM campaign];//LIMIT 10 //was originally set to 10 from VF
     }
     
     @AuraEnabled
