--- a/clientFolder/force-app/main/default/classes/PositionListApexController.cls
+++ b/clientFolder/force-app/main/default/classes/PositionListApexController.cls
@@ -2,7 +2,7 @@ public with sharing class PositionListApexController {
 
     
     @auraEnabled
-    public static List<Position__c> getPositionList(Integer queryLimit, Integer offset){
+    public static List<Position__c> getPositionList(Integer queryLimit, Integer offset, String sortOrder, String sortDirection){
         String[] fieldsToCheck = new String[]{
             'Name', 'Job_Description__c', 'Dealership__c', 'Id'};
                     Map<String, Schema.SObjectField> fieldDescribeTokens = 
@@ -13,11 +13,19 @@ public with sharing class PositionListApexController {
             }
 		}
         
-        
+        String sortValue;
+        switch on sortOrder {
+            when 'PositionName' {	
+                sortValue = 'Name';
+            }	
+            when 'Dealership' {
+                sortValue = 'Dealership__c';
+            }            
+        }
         
         System.debug(queryLimit);
         System.debug(offset);
-        List<Position__c> positionList = database.query('SELECT Id, Name, Job_Description__c, Dealership__c, Dealership__r.Name FROM Position__c WHERE Position__c.Status__c = \'Open\' LIMIT ' + queryLimit + ' OFFSET ' + offset);
+        List<Position__c> positionList = database.query('SELECT Id, Name, Job_Description__c, Dealership__c, Dealership__r.Name FROM Position__c WHERE Position__c.Status__c = \'Open\' ORDER BY ' + sortValue + ' ' + sortDirection + ' LIMIT ' + queryLimit + ' OFFSET ' + offset);
         
         return positionList;
     }
