Accounted for TeslaPortal default username

--- a/clientFolder/force-app/main/default/classes/nameGrabber.cls
+++ b/clientFolder/force-app/main/default/classes/nameGrabber.cls
@@ -5,6 +5,8 @@ public class nameGrabber {
         String myName = UserInfo.getFirstName();
         if (myName.length() > 0) {
             return myName;
+        } else if(myName == 'TeslaPortal') {
+            return 'Guest User';
         } else {
             return 'Guest User';
         }
